Fix service icon centering on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,12 +552,21 @@ main {
   justify-content: center;
   align-items: center;
   width: 100%;
+  text-align: center;
+}
+
+.service-icon-box ion-icon {
+  display: block;
+  margin: 0 auto;
 }
 
 .service-content-box { 
   text-align: center;
   width: 100%;
   padding: 0 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .service-item-title { 
